# mark-shot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh-CN.md  flake.nix  resources.qrc
.doc/: plan.md  submit-issue-via-gh.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: aur-publish.yml  build.yml  release-appimage.yml  release-aur-bin.yml  release-binaries.yml  release-deb.yml  release-flatpak.yml  release-rpm.yml
cmake/: capture_session_sources.cmake  cli_sources.cmake  ffmpeg_libav.cmake  install_rules.cmake  ipc_sources.cmake  marketplace_sources.cmake  marketplace_tests.cmake  notification_sources.cmake  pipewire_capture_sources.cmake  pipewire_capture_target.cmake  provider_sources.cmake  provider_tests.cmake  recording_sources.cmake  recording_tests.cmake  settings_sources.cmake  settings_tests.cmake  shot_window_sources.cmake  tests.cmake  zxing.cmake
data/: mark-shot-edit.desktop  mark-shot-edit.desktop.in  mark-shot.desktop  mark-shot.desktop.in  net.local.mark-shot.desktop.in
docs/: configuration.md  configuration.zh-CN.md  plugin-development.md  plugin-distribution.md  plugin-index-schema.md  plugin-marketplace.md  plugin-template-guide.md  releases.md  releases.zh-CN.md  windows-release.md
examples/: plugin-index.example.json
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur_bin/: PKGBUILD
packaging/flatpak/: io.github.jswysnemc.MarkShot.metainfo.xml  io.github.jswysnemc.MarkShot.yml
packaging/local_aur/: .SRCINFO  PKGBUILD
packaging/rpm/: mark-shot.spec
packaging/windows/: mark-shot.rc.in
plugin-sdk/markshot/: code_scan_provider_plugin.h  ocr_provider_plugin.h  translate_provider_plugin.h
plugin-templates/code-scan-provider/: CMakeLists.txt  README.md  metadata.json  sample_code_scan_plugin.cpp  sample_code_scan_plugin.h
plugin-templates/ocr-provider/: CMakeLists.txt  README.md  metadata.json  sample_ocr_plugin.cpp  sample_ocr_plugin.h
plugin-templates/translate-provider/: CMakeLists.txt  README.md  metadata.json  sample_translate_plugin.cpp  sample_translate_plugin.h
plugins/code-scan-zxing/: CMakeLists.txt  metadata.json  zxing_code_scan_plugin.cpp  zxing_code_scan_plugin.h
plugins/ocr-rapid/: CMakeLists.txt  metadata.json  rapid_det_model.cpp  rapid_det_model.h  rapid_model_paths.cpp  rapid_model_paths.h  rapid_ocr_plugin.cpp  rapid_ocr_plugin.h  rapid_ocr_word_segments.cpp  rapid_ocr_word_segments.h  rapid_onnx_session.cpp  rapid_onnx_session.h  rapid_rec_model.cpp  rapid_rec_model.h
plugins/translate-openai/: CMakeLists.txt  metadata.json  openai_translate_config.cpp  openai_translate_config.h  openai_translate_plugin.cpp  openai_translate_plugin.h  openai_translation_parser.cpp  openai_translation_parser.h
protocols/: wlr-screencopy-unstable-v1.xml
scripts/: mark-shot-ocr  mark-shot-translate  mark-shot-upload  mark-shot-window-detection-gnome  mark-shot-window-detection-hyprland  mark-shot-window-detection-kde  mark-shot-window-detection-niri  submit-issue.sh  windows-deploy-runtime.sh  windows-sign-artifact.ps1
src/: annotation_launch.cpp  annotation_launch.h  annotation_state_store.cpp  annotation_state_store.h  app_config_defaults.cpp  app_config_defaults.h  app_config_store.cpp  app_config_store.h  capture_cursor_policy.cpp  capture_cursor_policy.h  capture_cursor_policy_config.cpp  capture_geometry.cpp  capture_geometry.h  capture_own_windows_policy.cpp  capture_own_windows_policy.h  capture_own_windows_policy_config.cpp  capture_session_launcher.cpp  capture_session_launcher.h  capture_session_screen_utils.cpp  capture_session_screen_utils.h  clipboard_image.cpp  clipboard_image.h  export_image_effect.cpp  export_image_effect.h  global_shortcut_portal.cpp  global_shortcut_portal.h  kde_capture_config.cpp  kde_capture_config.h  layer_shell_plugin.cpp  layer_shell_plugin_interface.h  layer_shell_runtime.cpp  layer_shell_runtime.h  line_skeleton_path.cpp  line_skeleton_path.h  main.cpp  ocr_result.cpp  ocr_result_window.cpp  ocr_result_window.h  ocr_result_window_translation.cpp  pinned_window_config.cpp  (+68 more)
src/autostart/: autostart_linux.cpp  autostart_manager.cpp  autostart_manager.h  autostart_windows.cpp
src/cli/: image_pin_launch.cpp  image_pin_launch.h  recording_cli.cpp  recording_cli.h
src/ipc/: single_instance_ipc.cpp  single_instance_ipc.h
src/marketplace/: plugin_asset_downloader.cpp  plugin_asset_downloader.h  plugin_index_parser.cpp  plugin_index_parser.h  plugin_installer.cpp  plugin_installer.h  plugin_marketplace_client.cpp  plugin_marketplace_client.h
src/notifications/: app_notifications.cpp  app_notifications.h
src/pinned_window/: pinned_image_window.cpp  pinned_image_window.h  pinned_image_window_geometry.cpp  pinned_image_window_layer_shell.cpp  pinned_image_window_ocr.cpp  pinned_image_window_text_selection.cpp  pinned_image_window_translation.cpp  pinned_layer_shell_geometry.cpp  pinned_layer_shell_geometry.h  pinned_resize_controller.cpp  (+5 more)
tests/: app_config_defaults_test.cpp  capture_cursor_policy_test.cpp  capture_geometry_test.cpp  capture_own_windows_policy_test.cpp  capture_session_screen_utils_test.cpp  code_scan_zxing_plugin_test.cpp  color_history_store_test.cpp  export_image_effect_test.cpp  kde_capture_config_test.cpp  libav_recording_process_test.cpp  line_skeleton_path_test.cpp  niri_window_detection_test.py  ocr_provider_factory_test.cpp  ocr_rapid_plugin_test.cpp  ocr_result_test.cpp  pinned_layer_shell_geometry_test.cpp  pinned_layer_shell_screen_binding_test.cpp  pinned_resize_controller_test.cpp  pinned_text_selection_metrics_test.cpp  pinned_window_config_test.cpp  pipewire_buffer_data_types_test.cpp  plugin_index_parser_test.cpp  plugin_installer_test.cpp  provider_preference_config_test.cpp  rapid_ocr_word_segments_test.cpp  recording_bgra_buffer_pool_test.cpp  recording_capture_backend_test.cpp  recording_dialog_config_test.cpp  save_path_config_test.cpp  screen_capture_cursor_test.cpp  startup_default_color_test.cpp  translate_openai_plugin_test.cpp  translate_segments_test.cpp  ui_theme_config_test.cpp
(+180 files in other folders)
